@@ -1,6 +1,12 @@
+* Mon Mar 26 2007 Jesse Keating <jkeating@redhat.com>
+- Enable source iso building again.
+
+* Fri Mar 23 2007 Jesse Keating <jkeating@redhat.com>
+- Don't try a rescue if the script doesn't exist (prarit)
+- Make sure group conditionals are enabled
+
 * Thu Mar 22 2007 Jesse Keating <jkeating@redhat.com>
 - Pass flavor off to buildinstall if it is set (wwoods)
-- Don't try a rescue if the script doesn't exist (prarit)
 
 * Fri Mar 16 2007 Jesse Keating <jkeating@redhat.com>
 - Fix a logic flaw in the depsolving loop
